feat: added filter to subjects list api
